Initial commit - basic HTML and CSS structure

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- About Section -->
   <section id="about">
     <h2>About Me</h2>
-    <p>Hello! I'm Attah Attah, a passionate developer/designer/student/etc. I enjoy learning and building web-based solutions.</p>
+    <p>Hello! I'm Attah Attah, a passionate web developer, student/etc. I enjoy learning and building web-based solutions.</p>
   </section>
 
   <!-- Projects Section -->
