--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="project-details hidden">
       <p>This is a description of Project 1. It does awesome things.</p>
     </div>
-  </div>
+  </div
 
   <div class="project">
     <h3>Project 2</h3>
