Add dark mode button to html

--- a/index.html
+++ b/index.html
@@ -71,5 +71,7 @@
     <p>&copy; 2025 Attah Attah. All rights reserved.</p>
   </footer>
 
+
+  <button id="darkModeToggle">Dark Mode</button>
 </body>
 </html>
