--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <h3>Project 1</h3>
     <button class="toggle-btn">Show Details</button>
     <div class="project-details hidden">
-      <p>This is a description of Project 1. It does awesome things.</p>
+      <p> This is a project about Javascript events</p>
+      <a href="https://attah459.github.io/JavaScript_Events" target="_blank" class="toggle-btn">View JavaScript Events Project</a>
     </div>
   </div>
 
@@ -47,12 +48,6 @@
 
   <!-- Contact Section -->
   <section id="contact">
-  <h2>Contact Me</h2>
-  <form id="contactForm" novalidate>
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-    <div class="error-message" id="nameError"></div>
-
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
     <div class="error-message" id="emailError"></div>
