--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h3>Project 1</h3>
     <button class="toggle-btn">Show Details</button>
     <div class="project-details hidden">
-      <p> This is a project about Javascript events</p>
+      <p>This is a project about Javascript events</p>
       <a href="https://attah459.github.io/JavaScript_Events" target="_blank" class="toggle-btn">View JavaScript Events Project</a>
     </div>
   </div>
@@ -41,9 +41,19 @@
     <h3>Project 2</h3>
     <button class="toggle-btn">Show Details</button>
     <div class="project-details hidden">
-      <p>This is a description of Project 2. It also does great things.</p>
+      <p>This is a project about accessible registration forms</p>
+      <a href="https://attah459.github.io/accessible-registration" target="_blank" class="toggle-btn">View Accessible Registration Project</a>
     </div>
   </div>
+
+  <div class="project">
+  <h3>Project 3</h3>
+  <button class="toggle-btn">Show Details</button>
+  <div class="project-details hidden">
+    <p>This is a project about my first webpage</p>
+    <a href="https://attah459.github.io/my-first-webpage" target="_blank" class="toggle-btn">View My First Webpage Project</a>
+  </div>
+</div>
   </section>
 
   <!-- Contact Section -->
