--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
   </div>
 
-  <div class="project">
+  <div class="project"
   <h3>Project 3</h3>
   <button class="toggle-btn">Show Details</button>
   <div class="project-details hidden">
