added lazy loading

--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
     <a href="https://attah459.github.io/my-first-webpage" target="_blank" class="toggle-btn">View My First Webpage Project</a>
   </div>
 </div>
+
+<div class="project">
+  <h3>Project 4</h3>
+  <button class="toggle-btn">Show Details</button>
+  <div class="project-details hidden">
+    <p>This is a project for saving and loading data: </p>
+    <a href="https://attah459.github.io/CPAN134-assignment-2" target="_blank" class="toggle-btn">View CPAN134 Assignment 2 Project</a>
+  </div>
+</div>
   </section>
 
   <!-- Contact Section -->
@@ -78,5 +87,8 @@
 
 
   <button id="darkModeToggle">Dark Mode</button>
+
+  <img src="images/bg_comp.jpg" alt="Background" loading="lazy">
+<img src="images/bg-dark_comp.jpg" alt="Dark Background" loading="lazy">
 </body>
 </html>
