Fleshed out about and skills

--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
 
   <!-- About Section -->
   <section id="about">
-    <h2>About Me</h2>
+    <h2>About Me and Skills</h2>
     <p>Hello! I'm Attah Attah, a passionate web developer, student/etc. I enjoy learning and building web-based solutions.</p>
+    <p>I'm skilled in Javascript, HTML, CSS, and a bit of cybersecurity! Look below to see my projects so far!</p>
   </section>
 
   <!-- Projects Section -->
   <section id="projects">
     <div class="project">
-    <h3>Project 1</h3>
+      <div style="text-align:center;">
+        <h1>Projects</h1>
+      </div>
+    <h3>JavaScript Event Project</h3>
     <button class="toggle-btn">Show Details</button>
     <div class="project-details hidden">
       <p>This is a project about Javascript events</p>
@@ -38,7 +42,7 @@
   </div>
 
   <div class="project">
-    <h3>Project 2</h3>
+    <h3>Accessible Registration Forms</h3>
     <button class="toggle-btn">Show Details</button>
     <div class="project-details hidden">
       <p>This is a project about accessible registration forms</p>
@@ -47,7 +51,7 @@
   </div>
 
   <div class="project">
-  <h3>Project 3</h3>
+  <h3>My Very First Webpage!</h3>
   <button class="toggle-btn">Show Details</button>
   <div class="project-details hidden">
     <p>This is a project about my first webpage</p>
@@ -56,7 +60,7 @@
 </div>
 
 <div class="project">
-  <h3>Project 4</h3>
+  <h3>Project about saving and loading data!</h3>
   <button class="toggle-btn">Show Details</button>
   <div class="project-details hidden">
     <p>This is a project for saving and loading data: </p>
