--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Attah Attah - Portfolio</title>
+  <title>Attah Chijioke Attah - Portfolio</title>
   
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
@@ -12,7 +12,7 @@
 
   <!-- Header Section -->
   <header>
-    <h1>Attah Attah</h1>
+    <h1>Attah Chijioke Attah</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
@@ -67,6 +67,19 @@
     <a href="https://attah459.github.io/CPAN134-assignment-2" target="_blank" class="toggle-btn">View CPAN134 Assignment 2 Project</a>
   </div>
 </div>
+
+<div class="project">
+  <h3>A calorie tracker website</h3>
+  <button class="toggle-btn">Show Details</button>
+  <div class="project-details hidden">
+    <p>A calorie tracking website, that I worked on with a team</p>
+    <a href="https://julianmoodie.github.io/Calorie-Tracker/index.html" target="_blank" class="toggle-btn">View Calorie Tracker</a>
+  </div>
+</div>
+
+
+
+    
   </section>
 
   <!-- Contact Section -->
