--- a/index.html
+++ b/index.html
@@ -78,6 +78,24 @@
 </div>
 
 
+    <div class="project">
+  <h3>A AI Stock Market Game</h3>
+  <button class="toggle-btn">Show Details</button>
+  <div class="project-details hidden">
+    <p>An AI powered Virtual Stock Market Game, designed to teach people how to invest in the stock Market</p>
+    <a href="https://attah459.github.io/AI-Investment-Game" target="_blank" class="toggle-btn">View AI Stock Market Game</a>
+  </div>
+</div>
+
+
+        <div class="project">
+  <h3>A My First Chatbot</h3>
+  <button class="toggle-btn">Show Details</button>
+  <div class="project-details hidden">
+    <p>A Python based Chatbot</p>
+    <a href="https://github.com/Attah459/AI-Chatbot" target="_blank" class="toggle-btn">View The Chatbot</a>
+  </div>
+</div>
 
     
   </section>
