--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- About Section -->
   <section id="about">
     <h2>About Me and Skills</h2>
-    <p>Hello! I'm Attah Attah, a passionate web developer, student/etc. I enjoy learning and building web-based solutions.</p>
+    <p>Hello! I'm Attah Attah, a passionate web developer, student/etc. I enjoy learning and building web-based solutions and using AI to solve problems.</p>
     <p>I'm skilled in Javascript, HTML, CSS, and a bit of cybersecurity! Look below to see my projects so far!</p>
   </section>
 
