--- a/index.html
+++ b/index.html
@@ -42,6 +42,35 @@
   </div>
 </div>
 
+    
+      </div>
+    <h3>NB Immigration Solutions</h3>
+    <button class="toggle-btn">Show Details</button>
+    <div class="project-details hidden">
+      <p>I made the website, "NB Immigration Solutions", under a company called 'Vanokibs Consulting'</p>
+      <a href="https://nbimmigrationsolutions.ca" target="_blank" class="toggle-btn">View NB Immigrations Solutions</a>
+    </div>
+  </div>
+
+          </div>
+    <h3>NB Immigration Solutions</h3>
+    <button class="toggle-btn">Show Details</button>
+    <div class="project-details hidden">
+      <p>I made the website, "NB Immigration Solutions", under a company called 'Vanokibs Consulting'</p>
+      <a href="https://nbimmigrationsolutions.ca" target="_blank" class="toggle-btn">View NB Immigrations Solutions</a>
+    </div>
+  </div>
+
+ <div class="project">
+  <h3>Elite Settle and Relocate</h3>
+  <button class="toggle-btn">Show Details</button>
+  <div class="project-details hidden">
+    <p>I made the website, "Elite Settle and Relocate", under a company called 'Vanokibs Consulting'</p>
+    <a href="https://elitesettleandrelocate.com" target="_blank" class="toggle-btn">View The Chatbot</a>
+  </div>
+</div>
+
+    
     <div class="project">
   <h3>A My First Chatbot</h3>
   <button class="toggle-btn">Show Details</button>
