--- a/index.html
+++ b/index.html
@@ -43,16 +43,8 @@
 </div>
 
     
-      </div>
-    <h3>NB Immigration Solutions</h3>
-    <button class="toggle-btn">Show Details</button>
-    <div class="project-details hidden">
-      <p>I made the website, "NB Immigration Solutions", under a company called 'Vanokibs Consulting'</p>
-      <a href="https://nbimmigrationsolutions.ca" target="_blank" class="toggle-btn">View NB Immigrations Solutions</a>
-    </div>
-  </div>
-
-          </div>
+  
+          <div class="project">
     <h3>NB Immigration Solutions</h3>
     <button class="toggle-btn">Show Details</button>
     <div class="project-details hidden">
