--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
         
-      </div>
+       <div class="project">
     <h3>JavaScript Event Project</h3>
     <button class="toggle-btn">Show Details</button>
     <div class="project-details hidden">
